--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ https://templatemo.com/tm-520-highway
                 <div class="col-md-4 col-sm-6">
                     <div class="portfolio-item">
                         <div class="thumb">
-                            <a href="img/big_portfolio_item_3.png" data-lightbox="image-1"><div class="hover-effect">
+                            <a href="https://www.youtube.com/watch?v=qHts2ELfUXo"><div class="hover-effect">
                                 <div class="hover-content">
                                     <h1>Equity <em>in Healthcare</em></h1>
                                     <p>Documentary (Video)</p>
