--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ https://templatemo.com/tm-520-highway
                                 </div>
                             </div></a>
                             <div class="image">
-                                <img src="img/portfolio_item_3.jpg">
+                                <img src="img/portfolio_item_3.JPG">
                             </div>
                         </div>
                     </div>
