--- a/index.html
+++ b/index.html
@@ -87,13 +87,13 @@ https://templatemo.com/tm-520-highway
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4 col-sm-6">
+          <div class="col-md-4 col-sm-6">
                     <div class="portfolio-item">
                         <div class="thumb">
-                            <a href="https://www.youtube.com/watch?v=qHts2ELfUXo"><div class="hover-effect">
+                            <a href="https://www.youtube.com/watch?v=qzkIdW3cRiQ" target="_blank"><div class="hover-effect">
                                 <div class="hover-content">
-                                    <h1>Equity <em>in Healthcare</em></h1>
-                                    <p>Documentary (Video)</p>
+                                    <h1>Homecoming <em>IMSA</em></h1>
+                                    <p>Pep Rally & Dances (Video)</p>
                                 </div>
                             </div></a>
                             <div class="image">
@@ -102,8 +102,6 @@ https://templatemo.com/tm-520-highway
                         </div>
                     </div>
                 </div>
-               
-         
         </div>
     </div>
 
