--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@ https://templatemo.com/tm-520-highway
                         <div class="thumb">
                             <a href="https://youtu.be/qHts2ELfUXo" target="_blank"><div class="hover-effect">
                                 <div class="hover-content">
-                                    <h1>Homecoming <em>IMSA</em></h1>
-                                    <p>Pep Rally & Dances (Video)</p>
+                                    <h1>Equity <em>In Healthcare</em></h1>
+                                    <p>Documentary (Video)</p>
                                 </div>
                             </div></a>
                             <div class="image">
