--- a/index.html
+++ b/index.html
@@ -69,6 +69,22 @@ https://templatemo.com/tm-520-highway
                         </div>
                     </div>
                 </div>
+                  <div class="col-md-4 col-sm-6">
+                    <div class="portfolio-item">
+                        <div class="thumb">
+                            <a href="https://www.youtube.com/watch?v=zLHI4SQ9dpQ&t=1s" target="_blank"><div class="hover-effect">
+                                <div class="hover-content">
+                                    <h1>Diwali <em>Script</em></h1>
+                                    <p>Reality Show (Video)</p>
+                                </div>
+                            </div></a>
+                            <div class="image">
+                                <img src="img/portfolio_item_3.JPG">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                
                 <div class="col-md-4 col-sm-6">
                     <div class="portfolio-item">
                         <div class="thumb">
