--- a/index.html
+++ b/index.html
@@ -72,14 +72,14 @@ https://templatemo.com/tm-520-highway
                   <div class="col-md-4 col-sm-6">
                     <div class="portfolio-item">
                         <div class="thumb">
-                            <a href="https://www.youtube.com/watch?v=zLHI4SQ9dpQ&t=1s" target="_blank"><div class="hover-effect">
+                            <a href="https://www.youtube.com/watch?v=Wc0UoV2xCjg&t=4874s" target="_blank"><div class="hover-effect">
                                 <div class="hover-content">
-                                    <h1>Diwali <em>Script</em></h1>
-                                    <p>Reality Show (Video)</p>
+                                    <h1>Diwali <em>Film</em></h1>
+                                    <p>Cultural Celebration(Video)</p>
                                 </div>
                             </div></a>
                             <div class="image">
-                                <img src="img/portfolio_item_3.JPG">
+                                <img src="image1.PNG">
                             </div>
                         </div>
                     </div>
