--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ https://templatemo.com/tm-520-highway
                                 </div>
                             </div></a>
                             <div class="image">
-                                <img src="image1.PNG">
+                                <img src="image1.png">
                             </div>
                         </div>
                     </div>
