--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ https://templatemo.com/tm-520-highway
                                 </div>
                             </div></a>
                             <div class="image">
-                                <img src="img/portfolio_item_4.jpg">
+                                <img src="img/image2.JPG">
                             </div>
                         </div>
                     </div>
